Added wave counter

--- a/Assets/Scripts/Todo.txt
+++ b/Assets/Scripts/Todo.txt
@@ -1,12 +1,10 @@
 ﻿----------------------------------------    Features    --------------------------------------------
 * Laser charge sound
-* Wave counter
 * Make player more visible
 
 
 ----------------------------------------      Bugs      --------------------------------------------
 * Fix the laser charge up controls
-* Stuck on Spawn Point  <-- really tricky to reproduce
 * A* Bug  <-- shane
 * Death animations don't play after collision death. only bullets
 * Time UI not working correctly
@@ -40,4 +38,8 @@
     * Add more manual maps
         * Pick random map each spawn
     * Procedural Map Generation - lol
-    
+
+---------------------------------------- Done ----------------------------------------  
+
+* Stuck on Spawn Point  <-- really tricky to reproduce
+* Wave counter
