--- a/Assets/Scripts/Todo.txt
+++ b/Assets/Scripts/Todo.txt
@@ -1,19 +1,21 @@
 ﻿----------------------------------------    Features    --------------------------------------------
-
+* slower bullets
 
 ----------------------------------------      Bugs      --------------------------------------------
 * Fix the laser charge up controls ???
 * A* Bug  <-- shane
+* Change name in build
+* Fix in game score not showing (menu)
 
 ----------------------------------------       UX       --------------------------------------------
-Main menu game description 
+* Screenshots for jam page
         
 ----------------------------------------    Visuals    --------------------------------------------
 * Lighting - ongoing
 * Enemy shoot animation <-- (Seems hard)
     * serves as signposting for enemy shooting
 * Give the lazer more love (lighting)
-
+* ghost lighting when shooting
 
 ----------------------------------------    Sounds    --------------------------------------------
 * Better Enemy Shoot and Die ???
@@ -46,3 +48,4 @@ Main menu game description
     * there may be dozens or (hopefully) hundreds of scores posted
     * need to guarentee that the player can see their own ranking, even 
         when diluted by others
+* Main menu game description
